<resources>
    <string name="app_name">SIMPT</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_scan">Scan</string>
    <string name="title_library">Library</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_edit">Edit Profile</string>

    <string name="desc_name">Name</string>
    <string name="desc_profile">Profile Picture</string>
    <string name="desc_nim">NIM/NIP</string>

    <string name="home_add">Tambahkan Data</string>
    <string name="home_category">Tambahkan Kategori</string>
    <string name="home_detection">Deteksi Penyakit</string>
    <string name="home_data">Data Saya</string>
    <string name="home_submission">Cek Pengajuan</string>
    <string name="home_approval">Cek Pengajuan</string>
    <string name="home_show">Tampilkan Kategori</string>

    <string name="menu_filter">Filter</string>
    <string name="menu_layout">Layout</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_search">Search</string>
    <string name="menu_ascending">Ascending</string>
    <string name="menu_descending">Descending</string>
    <string name="menu_back">Back</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_delete">Delete</string>

    <string name="tab_komoditas">Komoditas</string>
    <string name="tab_penyakit">Penyakit</string>
    <string name="tab_pathogen">Pathogen</string>

    <string name="personal_info">Info Profil</string>
    <string name="account_info">Info Akun</string>
    <string name="user_info">User Information</string>

    <string name="info_name">Nama</string>
    <string name="info_nim">NIM</string>
    <string name="info_about">About Me</string>

    <string name="hint_name">Enter your name</string>
    <string name="hint_nim">Enter NIM</string>
    <string name="hint_about">Enter description</string>
    <string name="hint_phone">Enter phone number</string>
    <string name="hint_email">Enter email address</string>


    <string name="info_phone">Phone Number</string>
    <string name="info_email">Email</string>
    <string name="scan_desc">Scan penyakit kuning untuk tanaman:</string>


    <string name="title_cabai">Cabai</string>
    <string name="title_terung">Terung</string>
    <string name="title_kacang_panjang">Kacang Panjang</string>


    <string name="title_komoditas">Komoditas</string>
    <string name="hint_komoditas">Pilih Komoditas</string>

    <string name="title_penyakit">Penyakit</string>
    <string name="hint_penyakit">Pilih Penyakit</string>

    <string name="title_kategori_pathogen">Kategori Pathogen</string>
    <string name="hint_kategori_pathogen">Pilih Kategori Pathogen</string>

    <string name="title_pathogen">Pathogen</string>
    <string name="hint_pathogen">Pilih Pathogen</string>

    <string name="pathogen_virus">Virus</string>
    <string name="pathogen_bakteri">Bakteri</string>
    <string name="pathogen_cendawan">Cendawan</string>
    <string name="pathogen_nematoda">Nematoda</string>
    <string name="pathogen_fitoplasma">Fitoplasma</string>


    <string name="title_gejala">Gejala Penyakit</string>
    <string name="hint_gejala">Pilih Gejala Penyakit</string>

    <string name="title_deskripsi">Deskripsi</string>
    <string name="hint_deskripsi">Masukkan Deskripsi</string>

    <string name="title_dataset">Dataset Acuan</string>
    <string name="hint_dataset">Masukkan Dataset Acuan</string>


    <string name="title_sort">Sort</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_keterangan">Keterangan</string>


    <string name="hint_dataset_response">Lihat Gambar Dataset</string>
    <string name="hint_gambar_dataset">Tambahkan Gambar Dataset</string>
    <string name="hint_gambar">Tambahkan Gambar</string>
    <string name="hint_ganti_gambar">Ganti Gambar </string>
    <string name="hint_ganti_gambar_dataset">Ganti Gambar Dataset</string>
    <string name="hint_kategori">Masukkan Kategori</string>
    <string name="hint_nama_kategori">Masukkan Nama Kategori</string>
    <string name="hint_keterangan">Masukkan Keterangan</string>
    <string name="hint_nama">Masukkan Nama</string>
    <string name="hint_search">Cari Data</string>


    <string name="btn_apply">Apply</string>
    <string name="btn_save">Save</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_kategori">Tambahkan Kategori</string>
    <string name="btn_camera">Open Camera</string>
    <string name="btn_gallery">Choose from Gallery</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_filter">Open Filter</string>

    <string name="status_rejected">Rejected</string>
    <string name="status_approved">Approved</string>
    <string name="status_pending">Pending</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada porta felis. Nunc semper efficitur euismod. Sed ut quam urna. Suspendisse egestas quis nisl id aliquam. Cras scelerisque orci aliquam, convallis dolor eget, pellentesque urna. Etiam vel justo ut velit tristique tempor. Morbi sit amet finibus tellus, sed fringilla massa. Pellentesque lacinia pulvinar eros malesuada commodo. Nulla vel mattis eros. Donec ornare volutpat diam nec blandit.</string>


    <!--  Ntar benerin, nitip doang  -->
    <string name="skip">Continue Without Login</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to share stories about your learning and amazing experiences in Dicoding? Start here!</string>
    <string name="title_welcome_page">Welcome to Sistem Informasi Manajemen Proteksi Tanaman!</string>
    <string name="title_signup_page">Complete your personal details below</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="message_login_page">Fill your details first</string>
    <string name="title_login_page">Ready to share your amazing story?</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="password_warning">Password should be at least 8 characters long</string>
    <string name="story_maps">Story Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Try Again</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="hint_reject">Reject</string>
    <string name="hint_approve">Approve</string>
    <string name="all_categories">All Categories</string>
    <string name="hint_empty">No data available</string>
    <string name="title_nama_kategori">Nama Kategori</string>
    <string name="btn_delete">Delete</string>
    <string name="profile_image">Change Profile Picture</string>
    <string name="profile_password">Change Password</string>
    <string name="hint_password">Enter New Password</string>
    <string name="hint_profile">Enter New Value</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_edit_category">Edit Nama Kategori</string>
    <string name="title_comment">Beri komentar?</string>
    <string name="hint_comment">Berikan tanggapan anda</string>
    <string name="hint_response">Tanggapan</string>
    <string name="title_status">Status:</string>
    <string name="title_response_dosen">Berikan Tanggapan</string>
    <string name="title_response_user">Lihat Tanggapan</string>
    <string name="title_edit_data">Edit Data</string>
</resources>