<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_layout"
        android:title="@string/menu_layout"
        android:icon="@drawable/ic_grid_view"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_ascending"
                android:title="@string/menu_ascending"/>
            <item
                android:id="@+id/action_sort_descending"
                android:title="@string/menu_descending"/>
        </menu>

    </item>

</menu>