<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Kategori  Input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title_kategori"/>

        <FrameLayout
            android:id="@+id/fl_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_kategori"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_kategori"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_kategori"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </FrameLayout>

        <!-- Nama Input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/desc_name"/>

        <FrameLayout
            android:id="@+id/fl_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_nama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_nama"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </FrameLayout>

        <!-- Keterangan Input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title_keterangan"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_keterangan"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_keterangan"
                android:inputType="textMultiLine" /> <!-- Modified this line -->

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Deskripsi Input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title_deskripsi"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_deskripsi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_deskripsi"
                android:inputType="textMultiLine" /> <!-- Modified this line -->

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tambahkan Gambar Button -->
        <Button
            android:id="@+id/tambahkanGambarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_gambar"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_add"
            android:background="@drawable/bg_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_kategori"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
