<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Image -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/scan_illust" />
            </androidx.cardview.widget.CardView>

            <!-- Add Image Button -->
            <Button
                android:id="@+id/btn_add_dataset_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_image"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_button"
                android:drawableLeft="@drawable/ic_add"
                android:text="@string/hint_dataset_response"
                android:textColor="@color/black" />

            <!-- Uploader detail  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_add_dataset_image"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp">

                    <!-- Profile Picture -->
                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="16dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/desc_profile"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_profile" />

                    <!-- Name Field -->
                    <TextView
                        android:id="@+id/tv_name_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/iv_profile"
                        android:text="@string/info_name"
                        android:textColor="@color/gray2"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_below="@id/tv_name_title"
                        android:layout_marginEnd="8dp"
                        android:layout_toEndOf="@id/iv_profile"
                        android:background="@drawable/bg_text"
                        android:gravity="center|start"
                        android:padding="6dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:text="Lorem Ipsum" />

                    <!-- NIM Field -->
                    <TextView
                        android:id="@+id/tv_nim_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/iv_profile"
                        android:text="@string/info_nim"
                        android:textColor="@color/gray2"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_nim"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_below="@id/tv_nim_title"
                        android:layout_marginEnd="8dp"
                        android:layout_toEndOf="@id/iv_profile"
                        android:background="@drawable/bg_text"
                        android:gravity="center|start"
                        android:padding="6dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:text="Lorem Ipsum" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <!-- Komoditas Input -->
            <TextView
                android:id="@+id/tv_komoditas_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_profile"
                android:layout_marginTop="16dp"
                android:text="@string/title_komoditas"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_komoditas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_komoditas_title"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_text"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_komoditas"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />


            <!-- Penyakit Input -->
            <TextView
                android:id="@+id/tv_penyakit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_komoditas"
                android:layout_marginTop="16dp"
                android:text="@string/title_penyakit"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_penyakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_penyakit_title"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_text"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_penyakit"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />


            <!-- Kategori Pathogen Input -->
            <TextView
                android:id="@+id/tv_kategori_pathogen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_penyakit"
                android:layout_marginTop="16dp"
                android:text="@string/title_kategori_pathogen"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_kategori_pathogen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_kategori_pathogen_title"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_text"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_kategori_pathogen"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />


            <!-- Pathogen Input -->
            <TextView
                android:id="@+id/tv_pathogen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_kategori_pathogen"
                android:layout_marginTop="16dp"
                android:text="@string/title_pathogen"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_pathogen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_pathogen_title"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_text"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_pathogen"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />


            <!-- Gejala Input -->
            <TextView
                android:id="@+id/tv_gejala_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_pathogen"
                android:layout_marginTop="16dp"
                android:text="@string/title_gejala"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_gejala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_gejala_title"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_text"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_gejala"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />

            <!-- Dataset Acuan Input -->
            <TextView
                android:id="@+id/tv_dataset_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_gejala"
                android:layout_marginTop="16dp"
                android:text="@string/title_dataset"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dataset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_dataset_title"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_text"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_dataset"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />

            <!-- Deskripsi -->
            <TextView
                android:id="@+id/tv_desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_dataset"
                android:layout_marginTop="16dp"
                android:text="@string/title_deskripsi"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- TODO: Scrollable Description -->
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/tv_desc_title"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/bg_text"
                android:drawablePadding="10dp"
                android:gravity="top|start"
                android:hint="@string/hint_deskripsi"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />

        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:visibility="visible" />
</RelativeLayout>